package zs;

message TarGetFileList {
  repeated string relative_paths = 1;
}
